<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/portalpersonaje"
        tools:context=".view.PersonajesActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPersonaje"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPersonaje"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/nombre" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/tvSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/species" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.839"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/type" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPersonaje"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/gender" />

        <TextView
            android:id="@+id/tvOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:text="@string/origen"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSpecies"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_background"
            android:fontFamily="@font/get_schwifty"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrigen"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>