<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imFondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_oscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imPortadaPrincipal"
        android:layout_width="358dp"
        android:layout_height="340dp"
        android:layout_marginBottom="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imFondo"
        app:layout_constraintVertical_bias="0.232"
        app:srcCompat="@drawable/logo_rm"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btTemporadas"
        android:layout_width="205dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/portalepisodio"
        android:fontFamily="@font/get_schwifty"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="0.1"
        android:text="@string/temporadas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imPortadaPrincipal"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btEpisodios"
        android:layout_width="205dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/portalepisodio"
        android:fontFamily="@font/get_schwifty"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="0.1"
        android:text="@string/personajes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btTemporadas"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAjustes"
        android:layout_width="205dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/portalepisodio"
        android:fontFamily="@font/get_schwifty"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="0.1"
        android:text="@string/ajustes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEpisodios"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imEasterEgg"
        android:layout_width="413dp"
        android:layout_height="435dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imFondo"
        app:layout_constraintVertical_bias="0.368" />

</androidx.constraintlayout.widget.ConstraintLayout>